# comm

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
src/: cmds.rs  lib.rs  main.rs
ui/: index.css  index.html  index.js
