[package]
name = 'comm'
version = '0.0.0'
edition = '2021'

[lib]
name = "comm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
tauri = { version = "*", features = [] }
local-ip-address = "*"

[features]
custom-protocol = ["tauri/custom-protocol"]
